--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,12 @@
     --border: 1px solid rgba(64, 64, 64, 0.3);
     --border-radius: 8px;
 
-    --bg-primary: rgba(255, 255, 255, 1.0);
-    --bg-secondary: rgba(220, 220, 220, 1.0);
+    --region-border-radius: 4px;
 
-    --button-default: rgba(220, 220, 220, 1.0);
+    --bg-primary: rgba(255, 255, 255, 1.0);
+    --bg-secondary: rgba(230, 230, 230, 1.0);
+
+    --button-default: rgba(200, 200, 200, 1.0);
     --button-hover: rgba(150, 150, 150, 1.0);
     --button-active: rgba(100, 100, 100, 1.0);
 
@@ -22,10 +24,31 @@ body #root {
     overflow: hidden;
 }
 
+.default-border {
+    border: var(--border);
+}
+
+.bottom-border {
+    border-bottom: var(--border);
+}
+
+.border-rounded {
+    border-radius: var(--border-radius);
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
 /* Text Button class */
 .text-button {
     padding: 4px 8px 4px 8px;
-    border-radius: 7px;
+    border-radius: var(--border-radius);
     transition: all 0.3s ease-in-out;
     transition: filter 0.1s ease-in-out;
     border: var(--border);
