Improved Node Editor that you can drag connectors to connect or disconnect
- Merged `node_type` module into `node` module for better organization.
- Introduced `NodeData` and `NodeType` enums to encapsulate node properties.
- Updated `MixerCommand` to handle node addition and removal with new data structures.
- Enhanced `process_mixer` function to manage node connections and properties.
- Improved `NodeEditor` component to support dynamic node addition and connection visualization.
- Added `NodeConnector` component for rendering connections between nodes.
- Updated CSS styles for buttons and dropdown menus for better UI consistency.
- Refactored state management in `graph_state` to include node type utilities.

--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,9 @@
     --bg-secondary: oklch(94.538% 0.0117 264.578 / 0.7);
     --bg-tertiary: oklch(87.658% 0.01714 271.227 / 0.7);
 
-    --button-default: oklch(0.8945 0 0);
-    --button-hover: oklch(0.8328 0 0 / 80%);
-    --button-active: oklch(0.7699 0 0);
+    --button-default: oklch(50% 0.00006 271.152);
+    --button-hover: oklch(40% 0 0);
+    --button-active: oklch(30% 0 0);
 
     --text: oklch(0.3171 0 0);
     --text-inverted: oklch(1 0 0);
